--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "file-share",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
+    "pg": "^8.11.3",
     "socket.io": "^4.7.2"
   }
 }
